# velocity-ctr-service

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  app.py  benchmark.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  train.py
.github/workflows/: python-app.yml
tests/: test_app.py
