[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "velocity-ctr-service"
version = "0.1.0"
description = "High-throughput, low-latency CTR prediction engine for mobile advertising"
authors = [{name = "Karthik Reddy", email = "gkarthikreddy1118@gmail.com"}]
requires-python = ">=3.11"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=8.4.2", "httpx>=0.27.0"]
